--- a/DeleviryGoo/adminDashBoard.ejs
+++ b/DeleviryGoo/adminDashBoard.ejs
@@ -28,7 +28,7 @@
 
       <!--Hamburger-->
       <div class="hamburger">
-        <img src="img/grid-outline.svg" alt="" />
+        <img src="img/grid-outline.svg" alt="grid-outline" />
       </div>
     </header>
     <section class="home" id="home">
